--- a/package.json
+++ b/package.json
@@ -41,12 +41,17 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
+    "dotenv": "^16.4.5",
     "electron-squirrel-startup": "^1.0.1",
     "lucide-react": "^0.438.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
+    "redux-persist": "^6.0.0"
   }
 }
